[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/objects/IgnisRegularLevel/IgnisRegularLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/level0/Level0Landscape.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/characters/enemy1/Enemy1.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/objects/IgnisRegularOuter/IgnisRegularOuter.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/levels/level0/Level0.gd" type="Script" id=5]
[ext_resource path="res://src/characters/player/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/ui/pauseMenu/pauseMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/ui/HUD/HUD.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/objects/lever/Lever.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/objects/heart/Heart.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/ui/winWindow/WinWindow.tscn" type="PackedScene" id=11]
[ext_resource path="res://src/ui/gameOverWindow/WindowGameOver.tscn" type="PackedScene" id=12]
[ext_resource path="res://src/objects/door/Door.tscn" type="PackedScene" id=13]
[ext_resource path="res://src/objects/IgnisSectorOuter/IgnisSectorOuter.tscn" type="PackedScene" id=14]

[node name="Level0" type="Node2D"]
script = ExtResource( 5 )

[node name="Level0Landscape" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.5, 0.5 )

[node name="IgnisRegularOuter" parent="." instance=ExtResource( 4 )]
position = Vector2( 104, 288 )

[node name="Enemies" type="Node2D" parent="."]

[node name="Enemy" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 56, 112 )

[node name="Enemy2" parent="Enemies" instance=ExtResource( 3 )]
position = Vector2( 320, 136 )

[node name="Player" parent="." instance=ExtResource( 6 )]
position = Vector2( 48, 272 )

[node name="Door" parent="." instance=ExtResource( 13 )]
position = Vector2( 281.314, 228.932 )
collision_mask = 1
collision/safe_margin = 0.005

[node name="Torches" type="Node2D" parent="."]

[node name="IgnisRegularLevel" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 448, 152 )

[node name="IgnisRegularLevel2" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 208, 248 )

[node name="IgnisRegularLevel3" parent="Torches" instance=ExtResource( 1 )]
position = Vector2( 56, 128 )

[node name="Heart" parent="." instance=ExtResource( 10 )]
position = Vector2( 472, 152 )

[node name="Heart2" parent="." instance=ExtResource( 10 )]
position = Vector2( 241.671, 259.419 )

[node name="Heart3" parent="." instance=ExtResource( 10 )]
position = Vector2( 176, 272 )

[node name="Lever" parent="." instance=ExtResource( 9 )]
position = Vector2( 304, 240 )

[node name="Lever2" parent="." instance=ExtResource( 9 )]
position = Vector2( 152, 136 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" parent="CanvasLayer" instance=ExtResource( 8 )]
anchor_right = 0.0
margin_top = -20.0
margin_right = 1024.0
margin_bottom = 84.0

[node name="PauseMenu" parent="." instance=ExtResource( 7 )]

[node name="WinWindow" parent="." instance=ExtResource( 11 )]

[node name="WindowGameOver" parent="." instance=ExtResource( 12 )]

[node name="IgnisSectorOuter" parent="." instance=ExtResource( 14 )]
position = Vector2( 363.959, 198.663 )
[connection signal="active" from="Torches/IgnisRegularLevel2" to="Door" method="_on_IgnisRegularLevel_active"]
[connection signal="not_active" from="Torches/IgnisRegularLevel2" to="Door" method="_on_IgnisRegularLevel_not_active"]
[connection signal="lever_taken" from="Lever" to="Player" method="_on_Lever_lever_taken"]
[connection signal="lever_taken" from="Lever2" to="Player" method="_on_Lever_lever_taken"]
